# qfusion

./: .gitignore
libsrcs/angelscript/sdk/angelscript/projects/cmake/: CMakeLists.txt
libsrcs/angelscript/sdk/samples/game/projects/cmake/: CMakeLists.txt
libsrcs/libpng/: CMakeLists.txt
libsrcs/libtheora/: CMakeLists.txt
libsrcs/libtheora/lib/: CMakeLists.txt
source/: CMakeLists.txt  SDL2_notes  copydata.bat  premake4.lua  qfusion.vcxproj  qfusion.vcxproj.filters
source/angelwrap/: angelwrap.vcxproj  premake4.lua
source/cgame/: premake4.lua
source/cin/: premake4.lua
source/client/: cin.c  cl_vid.c  ftlib.c
source/ftlib/: ftlib.c  premake4.lua
source/game/: g_ascript.cpp  premake4.lua
source/gameshared/: q_arch.h
source/irc/: premake4.lua
source/mac/: mac_vid.m  rebuild_frameworks.sh
source/mac/Frameworks/: README
source/mac/Frameworks/RocketControlsOSX.framework/Versions/A/: RocketControlsOSX
source/mac/Frameworks/RocketControlsOSX.framework/Versions/A/Resources/: Info.plist
source/mac/Frameworks/RocketCoreOSX.framework/Versions/A/: RocketCoreOSX
source/mac/Frameworks/RocketCoreOSX.framework/Versions/A/Resources/: Info.plist
source/mac/Frameworks/SDL2.framework/Versions/A/: SDL2
source/mac/Frameworks/SDL2_image.framework/Versions/A/: SDL2_image
source/mac/Frameworks/angelscript.framework/Versions/A/: angelscript
source/mac/Frameworks/angelscript.framework/Versions/A/Headers/: angelscript.h
source/mac/Frameworks/jpeg.framework/: jpeg
source/mac/Frameworks/jpeg.framework/Versions/A/: jpeg
source/mac/Frameworks/jpeg.framework/Versions/A/Resources/: Info.plist
source/mac/Frameworks/libcurl.framework/: Headers  Resources  libcurl
source/mac/Frameworks/libcurl.framework/Versions/: Current
source/mac/Frameworks/libcurl.framework/Versions/Release-7.22.0/: libcurl
source/mac/Frameworks/libcurl.framework/Versions/Release-7.33.0-DEV/: libcurl
source/mac/Frameworks/libcurl.framework/Versions/Release-7.33.0-DEV/Resources/: Info.plist
source/mac/Frameworks/libpng.framework/Versions/1.2.50/: libpng
source/mac/Frameworks/png.framework/Versions/1.2.50/Resources/: Info.plist
source/qcommon/: ascript.c  cmd.c  common.c  files.c  library.c
source/ref_gl/: CMakeLists.txt  premake4.lua  r_image.c  r_imagelib.c  r_program.c  r_register.c  ref_gl.vcxproj  ref_gl.vcxproj.filters
source/sdl/: sdl_glw.c  sdl_glw.h  sdl_input.c  sdl_lib.c  sdl_qgl.c  sdl_sys.c  sdl_sys_linux.c  sdl_sys_osx.m  sdl_sys_unix.c  sdl_sys_win32.c  sdl_vid.c
source/snd_openal/: premake4.lua
source/snd_qf/: premake4.lua
source/tv_server/: premake4.lua
source/ui/: premake4.lua
source/ui/kernel/: ui_rocketmodule.cpp
source/unix/: unix_snd.c  unix_sys.c
source/win32/: win_input.c  win_net.c
source/win32/x86/lib/debug/: SDL2.exp  SDL2.ilk  SDL2.lib  SDL2main.lib
source/win32/x86/lib/release/: SDL2.lib  SDL2main.lib
